# HaskellRocks

./: .gitignore  FuncionalTest.cabal  README.md
src/: AltoOrden.hs  Base2.hs  Ejercicio2.hs  Funciones de alto orden - viernes 08-09.hs  Funciones de alto orden.hs  HexDigit.hs  Main.hs  Main.hs 2  Median.hs  Prepa.hs  PrimerModulo.hs  Prueba2.hs  TicTacToe.hs  TicTacToe2.hs  Truco.hs  UT2.hs  UT5.hs  Viernes-15-09.hs  areDigitStrs.hs  dotProduct.hs  isDigitStr.hs  pairMap.hs
src/obligatorio/: Contingency.hs  Main.hs
src/parcial1/: Clamp.hs  Ejercicio1.hs  Entorno.hs  FilterParen.hs  IsDigit.hs  Main.hs  MainFeo.hs  Overlap.hs  Parcial1Fede.hs  Parcialuno.hs  Prepa.hs  UT1.hs  UT3.hs  UT5.hs  appendLength.hs  eightQueens.hs  map2.hs  parseBit.hs  parseDecimal.hs
src/parcial2/: Algebraicos.hs  Clasess.hs  CodeAM.hs  CompileWhileAM.hs  GuessGame.hs  HexGame.hs  JuegoCartas.hs  Lambda.hs  Main.hs  Monadass.hs  Parcial2.hs  Prepa.hs  WhileLang.hs
