name:                 FuncionalTest
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Ignacio Garrone
maintainer:           ignacio.garrone@despegar.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable FuncionalTest
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
  hs-source-dirs:       src
  default-language:     Haskell2010
