name:                 FuncionalTest
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Ignacio Garrone
maintainer:           ignacio.garrone@despegar.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable FuncionalTest1
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
  hs-source-dirs:       src/parcial1
  default-language:     Haskell2010

executable FuncionalTest2
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10, random
  hs-source-dirs:       src/parcial2
  default-language:     Haskell2010
